<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="org.beigesoft.accounting.android.BeigeAccounting" >

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ajettyNumber" />

  <EditText
    android:id="@+id/etAjettyIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="number" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ksPassw" />

  <EditText
    android:id="@+id/etKsPassw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ksPasswRep" />

  <EditText
    android:id="@+id/etKsPasswRep"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/port" />
    
    <Spinner
      android:id="@+id/cmbPort"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

  </LinearLayout>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnStart"
    android:text="@string/start" />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnStop"
    android:text="@string/stop" />

  <Button
    android:id="@+id/btnStartBrowser"
    android:layout_marginTop="20sp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</LinearLayout>
